[gd_scene load_steps=6 format=2]

[ext_resource path="res://default_assets/theme/theme_default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/Menu_Inventory.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/inventory/Party_Preview.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/inventory/Item_Preview.tscn" type="PackedScene" id=4]

[sub_resource type="ButtonGroup" id=1]

[node name="Inventory" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter_Bar" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.6
anchor_bottom = 0.05
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="CheckBox" parent="Filter_Bar"]
margin_right = 45.0
margin_bottom = 25.0
pressed = true
group = SubResource( 1 )
text = "All"

[node name="VSeparator" type="VSeparator" parent="Filter_Bar"]
margin_left = 49.0
margin_right = 53.0
margin_bottom = 25.0

[node name="Equipment" type="CheckBox" parent="Filter_Bar"]
margin_left = 57.0
margin_right = 154.0
margin_bottom = 25.0
group = SubResource( 1 )
text = "Equipment"

[node name="VSeparator2" type="VSeparator" parent="Filter_Bar"]
margin_left = 158.0
margin_right = 162.0
margin_bottom = 25.0

[node name="Consumables" type="CheckBox" parent="Filter_Bar"]
margin_left = 166.0
margin_right = 280.0
margin_bottom = 25.0
group = SubResource( 1 )
text = "Consumables"

[node name="Items" type="Panel" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.6
anchor_bottom = 0.95
margin_left = 3.8147e-06
margin_top = 30.0
rect_min_size = Vector2( 400, 370 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Items"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
rect_min_size = Vector2( 400, 360 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Items/Scroll"]
margin_right = 1024.0
margin_bottom = 910.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 4

[node name="Item_Preview" parent="." instance=ExtResource( 4 )]

[node name="Party_Preview" parent="." instance=ExtResource( 3 )]

[node name="EquipConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
dialog_text = "You are about to "
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsumeConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
dialog_text = "You are about to "
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Filter_Bar/All" to="." method="_on_filter_pressed"]
[connection signal="pressed" from="Filter_Bar/Equipment" to="." method="_on_filter_pressed"]
[connection signal="pressed" from="Filter_Bar/Consumables" to="." method="_on_filter_pressed"]
[connection signal="consume_cur_item_request" from="Item_Preview" to="." method="_on_consume_cur_item_request"]
[connection signal="equip_cur_item_request" from="Item_Preview" to="." method="_on_equip_cur_item_request"]
[connection signal="confirmed" from="EquipConfirmationDialog" to="." method="_on_equip_confirmed"]
[connection signal="confirmed" from="ConsumeConfirmationDialog" to="." method="_on_consume_confirmed"]
